--- a/themes/eca-viracao/sass/style.scss
+++ b/themes/eca-viracao/sass/style.scss
@@ -44,12 +44,16 @@ body {
   -webkit-font-smoothing: antialiased;
   text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
   font-weight: 600;
+  @media all and (max-width: 767px) {
+	font-size: .8rem;
+	}
 }
 h1,h2,h3,h4 {
 	font-family: $rounded;
 }
 
 h1 {
+	font-size: 2rem;
 	color: $primary;
 }
 
@@ -82,6 +86,95 @@ img {
 	}
 	p {
 		font-size: .8rem;
+	}
+}
+
+.pagination {
+	display: block;
+	width: 100%;
+	text-align: center;
+	& > *:last-child {
+		border-right: 1px solid #dedede;
+	}
+	span {
+		color: $purple;
+	}
+	a, span {
+		padding: 10px 13px 7px 12px;
+    border: 1px solid #dedede;
+    border-right: none;
+    font-weight: 800;
+    font-family: $rounded;
+	}
+	a:hover {
+  	background: $orange;
+  	color: $white;		
+	}
+}
+
+.embed-container { 
+	position: relative; 
+	padding-bottom: 56.25%;
+	overflow: hidden;
+	max-width: 100%;
+	height: auto;
+} 
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed { 
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.video-aula-thumb {
+	cursor: pointer;
+	&:hover {
+		transform: scale(1.1);
+	}
+}
+
+#home-rapidinhas-slide {
+	
+	.container-fluid {
+		position: relative;
+	}
+	.bg {
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background-size: cover;
+		background-position: center;
+		
+		-webkit-filter: contrast(1.3); /* Safari */
+    filter: contrast(1.3);
+    z-index: -2;
+	}
+	.shadow {
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background: #FF7C00;
+		z-index: -1;
+		opacity: .5;
+	}
+	.col-11 {
+		position: relative;
+	}
+	.meta {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 9;
 	}
 }
 
