--- a/themes/eca-viracao/sass/style.scss
+++ b/themes/eca-viracao/sass/style.scss
@@ -56,10 +56,18 @@ h1 {
 	font-size: 2rem;
 	color: $primary;
 }
+h2 {
+	font-size: 1.7rem;
+	color: $primary;
+}
 
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+.big {
+	font-size: 2.5rem;
 }
 
 .divisor {
@@ -75,6 +83,7 @@ img {
 	border: 1px solid #dedede;
 	color: $body;
 	margin-bottom: 30px;
+	transition: .3s;
 	.meta {
 		padding: 15px;
 	}
@@ -86,6 +95,9 @@ img {
 	}
 	p {
 		font-size: .8rem;
+	}
+	&:hover {
+		background: #FFCE00;
 	}
 }
 
@@ -148,23 +160,15 @@ img {
 		position: fixed;
 		top: 0;
 		left: 0;
+    background-color: #ff6d0f;
 		background-size: cover;
 		background-position: center;
-		
-		-webkit-filter: contrast(1.3); /* Safari */
-    filter: contrast(1.3);
+		-webkit-filter: contrast(1); /* Safari */
+    filter: contrast(1);
     z-index: -2;
+    background-blend-mode: multiply;
 	}
-	.shadow {
-		width: 100%;
-		height: 100%;
-		position: fixed;
-		top: 0;
-		left: 0;
-		background: #FF7C00;
-		z-index: -1;
-		opacity: .5;
-	}
+
 	.col-11 {
 		position: relative;
 	}
@@ -178,5 +182,26 @@ img {
 	}
 }
 
+.conceito-home {
+	.icon {
+		display: block;
+		margin: 0 auto 20px;
+		max-width: 150px;
+		max-height: 150px;
+		width: 100%;
+		height: auto;
+		padding: 30px;
+		border-radius: 100%;
+		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff5a0b+0,ff7c00+100 */
+		background: #ff5a0b; /* Old browsers */
+		background: -moz-linear-gradient(top, #ff5a0b 0%, #ff7c00 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(top, #ff5a0b 0%,#ff7c00 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(to bottom, #ff5a0b 0%,#ff7c00 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5a0b', endColorstr='#ff7c00',GradientType=0 ); /* IE6-9 */
+	}
+}
+
+
 @import 'header-footer';
 @import 'single';
+@import 'conceitos';
