--- a/themes/eca-viracao/sass/fonts.scss
+++ b/themes/eca-viracao/sass/fonts.scss
@@ -14,22 +14,5 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'Solomon Sans Book';
-    src: url('./fonts/Solomon-Sans-Book.woff2') format('woff2'),
-        url('./fonts/Solomon-Sans-Book.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-
-
-
-@font-face {
-    font-family: 'Solomon Sans';
-    src: url('./fonts/Solomon-Sans-Bold.woff2') format('woff2'),
-        url('./fonts/Solomon-Sans-Bold.woff') format('woff');
-    font-weight: 800;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,600');
 
