--- a/themes/eca-viracao/sass/single.scss
+++ b/themes/eca-viracao/sass/single.scss
@@ -38,6 +38,9 @@
 		margin-bottom: 20px;
 	}
 	.the-post {
+		a {
+			font-weight: 800;
+		}
 		p {
 			line-height: 1.8;
 		}
@@ -45,15 +48,30 @@
 			margin-bottom: 30px;
 		}	
 		h2 {
+			margin-top: 15px;
 			font-size: 1.5rem;
 			font-family: $rounded;
 			font-weight: 600;
 			color: #360060;
 		}
+		h3 {
+			font-size: 1.2rem;
+			color: $purple;
+			margin-bottom: 5px;
+		}
+		blockquote {
+			border: 2px solid $orange;
+			padding: 15px 15px 5px;
+			color: $black;
+			margin-top: 15px;
+			margin-bottom: 30px;
+			color: #360060;
+			font-weight: 800;
+		}
 	}
 	
 }
-.question {
+.the-post h2.question {
 	margin-top: 45px;
 	margin-bottom: 30px;
 	color: $orange!important;
@@ -63,7 +81,8 @@
 }
 .quiz-options {
 	margin-left: 0;
-	padding-left: 0;
+	padding-left: 15px;
+	padding-right: 15px;
 	li {
 		max-width: 500px;
 		margin-left: 0;
