--- a/themes/eca-viracao/sass/style.scss
+++ b/themes/eca-viracao/sass/style.scss
@@ -211,3 +211,19 @@ img {
 #bbpress-forums * {
     font-size: 16px!important;
 }
+
+
+
+//////
+
+.bbp-login-form {
+	max-width: 500px;
+	margin: 15px auto;
+	border: 1px solid #dedede;
+	padding: 15px;
+}
+
+
+
+
+//////
