--- a/themes/eca-viracao/sass/fonts.scss
+++ b/themes/eca-viracao/sass/fonts.scss
@@ -14,5 +14,5 @@
     font-style: normal;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,600');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600');
 
