--- a/themes/eca-viracao/sass/header-footer.scss
+++ b/themes/eca-viracao/sass/header-footer.scss
@@ -1,11 +1,11 @@
 
 .navbar-light {
-	padding: 1.5rem;
+	padding: 1rem 15px;
 	.custom-logo {
-		height: 80px;
+		height: 60px;
 		width: auto;
 		@media all and (max-width: 991px) {
-			height: 60px;
+			height: 50px;
 		}
 	}
 	.menu-item.active a.nav-link {
@@ -15,6 +15,7 @@
 		font-family: $rounded;
 		color: $purple;
 		font-weight: 800;
+		font-size: 16px;
 		&:hover {
 			color: $orange;
 		}
@@ -38,6 +39,27 @@
 				color: #fff;
 				background: $light-blue;
 			}
+		}
+	}
+}
+
+.footer {
+	background: #4A268B;
+	color: $white;
+	padding-top: 45px;
+	padding-bottom: 30px;
+	font-size: 15px;
+	.menu {
+		ul {
+			padding-left: 0;
+		}
+		
+		li {
+			padding-left: 0;
+			list-style: none;
+		}
+		a {
+			color: $white
 		}
 	}
 }
