--- a/themes/eca-viracao/sass/style.scss
+++ b/themes/eca-viracao/sass/style.scss
@@ -32,7 +32,7 @@ $body: #707070;
 $light-blue: #00CEFF;
 $primary: $orange;
 $rounded: 'Simply Rounded', sans-serif;
-$font-family-sans-serif: 'Raleway', sans-serif;
+$font-family-sans-serif: 'Fira Sans', sans-serif;
 @import 'bootstrap/bootstrap';
 body {
 	font-size: 17px;
@@ -163,10 +163,7 @@ img {
     background-color: #ff6d0f;
 		background-size: cover;
 		background-position: center;
-		-webkit-filter: contrast(1); /* Safari */
-    filter: contrast(1);
     z-index: -2;
-    background-blend-mode: multiply;
 	}
 
 	.col-11 {
