--- a/themes/eca-viracao/sass/header-footer.scss
+++ b/themes/eca-viracao/sass/header-footer.scss
@@ -2,10 +2,10 @@
 .navbar-light {
 	padding: 1rem 15px;
 	.custom-logo {
-		height: 60px;
+		height: 70px;
 		width: auto;
 		@media all and (max-width: 991px) {
-			height: 50px;
+			height: 55px;
 		}
 	}
 	.menu-item.active a.nav-link {
@@ -15,13 +15,13 @@
 		font-family: $rounded;
 		color: $purple;
 		font-weight: 800;
-		font-size: 16px;
+		font-size: 17px;
 		&:hover {
 			color: $orange;
 		}
 	}
 	.nav-item:last-child {
-		margin-left: 20px;
+		margin-left: 15px;
 		.nav-link {
 			font-family: $font-family-sans-serif;
 			font-size: 12px;
@@ -45,10 +45,16 @@
 
 .footer {
 	background: #4A268B;
-	color: $white;
-	padding-top: 45px;
+	color: white;
 	padding-bottom: 30px;
 	font-size: 15px;
+	hr {
+		margin-bottom: 30px;
+	}
+	h5 {
+		font-weight: 800;
+		margin-bottom: 15px;
+	}
 	.menu {
 		ul {
 			padding-left: 0;
@@ -57,9 +63,25 @@
 		li {
 			padding-left: 0;
 			list-style: none;
+			display: inline-block;
+			margin-bottom: 30px;
 		}
 		a {
-			color: $white
+			color: white;
+			padding: 15px;
+			text-decoration: none;
+			&:hover {
+				background:$orange;
+			}
 		}
+		i {
+			font-size: 20px;
+			display: unset;
+		}
+	}
+	.menu-row {
+		background: #0000002a;
+		padding-top: 45px;
+		margin-bottom: 45px;
 	}
 }
