--- a/themes/eca-viracao/sass/style.scss
+++ b/themes/eca-viracao/sass/style.scss
@@ -88,10 +88,12 @@ img {
 		padding: 15px;
 	}
 	h2 {
-		margin-top: 15px;
-		margin-bottom: 8px;
+		margin-top: 5px;
+		margin-bottom: 15px;
 		color: $purple;
-		font-size: 1rem;
+		font-size: 1.2rem;
+		line-height: 1.3;
+		font-weight: 400;
 	}
 	p {
 		font-size: .8rem;
