--- a/themes/eca-viracao/sass/conceitos.scss
+++ b/themes/eca-viracao/sass/conceitos.scss
@@ -11,6 +11,9 @@
 		font-size: 1.3rem;
 		padding: 20px 0 15px;
 		margin-right: 15px;
+		@media all and (max-width: 991px) {
+			font-size: 1rem;
+		}
 		@media all and (max-width: 767px) {
 			font-size: .8rem;
 		}
