--- a/themes/eca-viracao/sass/header-footer.scss
+++ b/themes/eca-viracao/sass/header-footer.scss
@@ -19,6 +19,9 @@
 		&:hover {
 			color: $orange;
 		}
+		@media all and (max-width: 1199px) {
+			font-size: 15px;
+		}
 	}
 	.nav-item:last-child {
 		margin-left: 15px;
@@ -39,6 +42,19 @@
 				color: #fff;
 				background: $light-blue;
 			}
+		}
+		@media all and (max-width: 991px) {
+			margin-left: 0;
+			.nav-link {
+				display: inline-block;
+			}
+		}
+	}
+	@media all and (max-width: 991px) {
+		.navbar-collapse {
+			border-top: 1px solid rgb(204, 204, 204);
+	    margin-top: 10px;
+	    padding-top: 5px;
 		}
 	}
 }
