--- a/themes/eca-viracao/sass/style.scss
+++ b/themes/eca-viracao/sass/style.scss
@@ -66,6 +66,11 @@ img {
 	height: auto;
 }
 
+button {
+	@extend .btn;
+  @extend .btn-primary;
+}
+
 .big {
 	font-size: 2.5rem;
 }
@@ -207,12 +212,20 @@ img {
 
 
 
-#bbpress-forums * {
-    font-size: 16px!important;
+#bbpress-forums { 
+		font-size: 1rem;
+    // * {
+    // 	font-size: 16px!important;
+    // }
+    .bbp-topic-title {
+    	font-size: 1.3em;
+    }
 }
 
 
-
+.bbp-pagination-links a, .bbp-pagination-links span.current {
+    padding: 3px 10px;
+}
 //////
 
 .bbp-login-form {
