--- a/themes/eca-viracao/sass/single.scss
+++ b/themes/eca-viracao/sass/single.scss
@@ -8,10 +8,11 @@
 	&.header-foto {
 		background-size: cover;
 		background-repeat: no-repeat;
+		background-position: center;
 	}
 	h1 {
-		margin-top: 4rem;
-		margin-bottom: 4rem;
+		margin-top: 6rem;
+		margin-bottom: 6rem;
 		font-size: 3.3rem;
 		color: $white;
 	}
@@ -63,6 +64,9 @@
 			font-size: 1.2rem;
 			color: $purple;
 			margin-bottom: 5px;
+		}
+		h4, h5, h6 {
+			color: $orange;
 		}
 		blockquote {
 			border: 2px solid $orange;
