--- a/themes/eca-viracao/sass/forum.scss
+++ b/themes/eca-viracao/sass/forum.scss
@@ -36,8 +36,12 @@ ul.forum-titles li {
 a.bbp-author-name {
 	color: $purple;
 }
-.bbp-author-avatar {
+.bbp-topics .bbp-author-avatar {
 	display: none;
+}
+.bbp-reply-author .avatar {
+	border-radius: 100%;
+	margin-bottom: 10px;
 }
 .bbp-topic-freshness-author {
 	display: none;
@@ -60,4 +64,7 @@ a.bbp-author-name {
 	&:hover {
 		background: darken($orange, 10%);
 	}
+}
+.bbp-reply-content {
+	font-size: 16px;
 }
