--- a/themes/eca-viracao/sass/single.scss
+++ b/themes/eca-viracao/sass/single.scss
@@ -5,6 +5,7 @@
 	background-repeat: repeat-x;
 	// background-size: contain;
 	background-attachment: fixed;
+	min-height: 280px;
 	&.header-foto {
 		background-size: cover;
 		background-repeat: no-repeat;
