--- a/themes/eca-viracao/sass/single.scss
+++ b/themes/eca-viracao/sass/single.scss
@@ -22,7 +22,9 @@
 		h1 {
 			margin-top: 3rem;
 			margin-bottom: 3rem;
-			font-size: 2.5rem;
+			font-size: 1.8rem;
+			padding-left: 15px;
+			padding-right: 15px;
 			color: $white;
 		}
 	}
